--- a/FindOverUnderIssue/App.config
+++ b/FindOverUnderIssue/App.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  </startup>
+  <connectionStrings>
+    <clear/>
+    <add name="Database" connectionString="Server=PELICAN-FS3;Initial Catalog=M1_PW;Integrated Security=true"/>
+  </connectionStrings>
 </configuration>
