--- a/FindOverUnderIssue/App.config
+++ b/FindOverUnderIssue/App.config
@@ -6,6 +6,6 @@
 
   <connectionStrings>
     <clear/>
-    <add name="Database" connectionString="Server=PELICAN-FS3;Initial Catalog=M1_PW;Integrated Security=true"/>
+    <add name="Database" connectionString="Server=.;Initial Catalog=.;Integrated Security=true"/>
   </connectionStrings>
 </configuration>
